--- a/index.html
+++ b/index.html
@@ -4,128 +4,122 @@
 <meta charset="UTF-8">
 <title>Personal AI</title>
 <style>
-body {
-  font-family: Arial;
-  padding: 20px;
-  background: #111;
-  color: white;
+body{
+  background:#0f0f0f;
+  color:#fff;
+  font-family:system-ui;
+  padding:20px;
 }
-input, button {
-  padding: 10px;
-  font-size: 16px;
+#chat{
+  white-space:pre-wrap;
+  margin-top:20px;
 }
-#chat {
-  margin-top: 20px;
-  white-space: pre-wrap;
+input,button{
+  padding:10px;
+  font-size:16px;
 }
 </style>
 </head>
 <body>
 
-<h2 id="status">AI yükleniyor...</h2>
+<h2 id="status">Loading AI...</h2>
 
-<input id="input" placeholder="Mesaj yaz" style="width:70%">
-<button onclick="send()">Gönder</button>
+<input id="input" placeholder="Message">
+<button onclick="send()">Send</button>
 
 <div id="chat"></div>
 
 <script type="module">
 
-import { pipeline, env } from "https://cdn.jsdelivr.net/npm/@xenova/transformers";
+import { pipeline, env } from
+"https://cdn.jsdelivr.net/npm/@xenova/transformers@2.17.2";
 
-// CRITICAL FIXES
 env.allowLocalModels = false;
 env.useBrowserCache = true;
 
-let generator;
-let history = "";
+let pipe;
 
-// LOAD MODEL
-async function load() {
+const system =
+"You are a helpful assistant.";
 
-  try {
+let history = system;
 
-    document.getElementById("status").innerText = "Model indiriliyor...";
+// LOAD
+async function init(){
 
-    generator = await pipeline(
-      "text-generation",
-      "Xenova/distilgpt2",
-      {
-        quantized: true,
-        progress_callback: (p) => {
-          document.getElementById("status").innerText =
-            "İndiriliyor: " + Math.round(p.progress || 0) + "%";
-        }
-      }
-    );
+  document.getElementById("status").innerText =
+  "Downloading model...";
 
-    document.getElementById("status").innerText = "AI hazır";
+  pipe = await pipeline(
+    "text-generation",
+    "Xenova/gpt2",
+    {
+      quantized:true
+    }
+  );
 
-  } catch (e) {
+  document.getElementById("status").innerText =
+  "AI Ready";
 
-    document.getElementById("status").innerText =
-      "HATA: " + e.message;
-
-    console.error(e);
-  }
 }
 
-// SEND MESSAGE
-window.send = async function() {
+// SEND
+window.send = async function(){
 
-  if (!generator) {
-    alert("AI henüz hazır değil");
+  if(!pipe){
+    alert("Wait for AI to load");
     return;
   }
 
-  const input = document.getElementById("input");
-  const chat = document.getElementById("chat");
+  const input =
+  document.getElementById("input");
 
-  const userText = input.value.trim();
+  const chat =
+  document.getElementById("chat");
 
-  if (!userText) return;
+  const msg =
+  input.value.trim();
 
-  chat.innerHTML += "\n🧑 Sen: " + userText;
-  chat.innerHTML += "\n🤖 AI düşünüyor...";
+  if(!msg)return;
 
-  input.value = "";
+  chat.innerHTML +=
+  "\nYOU: "+msg+
+  "\nAI: ...";
 
-  try {
+  input.value="";
 
-    const prompt =
-      history +
-      "\nUser: " + userText +
-      "\nAI:";
+  const prompt =
+  history+
+  "\nUser:"+msg+
+  "\nAssistant:";
 
-    const result = await generator(prompt, {
-      max_new_tokens: 30,
-      do_sample: false
-    });
+  const out =
+  await pipe(prompt,{
+    max_new_tokens:50,
+    temperature:0.7
+  });
 
-    let output = result[0].generated_text;
+  const full =
+  out[0].generated_text;
 
-    let answer = output.split("AI:").pop().trim();
+  let reply =
+  full.slice(prompt.length).trim();
 
-    if (!answer) answer = "...";
+  if(!reply) reply="Ok.";
 
-    chat.innerHTML =
-      chat.innerHTML.replace("🤖 AI düşünüyor...", "🤖 AI: " + answer);
+  chat.innerHTML =
+  chat.innerHTML.replace(
+  "AI: ...",
+  "AI: "+reply
+  );
 
-    history += "\nUser: " + userText + "\nAI: " + answer;
+  history+=
+  "\nUser:"+msg+
+  "\nAssistant:"+reply;
 
-  } catch (e) {
-
-    chat.innerHTML =
-      chat.innerHTML.replace(
-        "🤖 AI düşünüyor...",
-        "❌ HATA: " + e.message
-      );
-
-    console.error(e);
-  }
 }
 
-load();
+init();
 
 </script>
 
