--- a/index.html
+++ b/index.html
@@ -3,26 +3,41 @@
 <head>
 <meta charset="UTF-8">
 <title>Personal AI</title>
+
 <style>
 body{
   background:#0f0f0f;
-  color:#fff;
+  color:#ffffff;
   font-family:system-ui;
   padding:20px;
 }
+
+#status{
+  margin-bottom:10px;
+  font-weight:bold;
+}
+
 #chat{
   white-space:pre-wrap;
   margin-top:20px;
 }
-input,button{
+
+input{
+  padding:10px;
+  font-size:16px;
+  width:70%;
+}
+
+button{
   padding:10px;
   font-size:16px;
 }
 </style>
+
 </head>
 <body>
 
-<h2 id="status">Loading...</h2>
+<h2 id="status">Starting...</h2>
 
 <input id="input" placeholder="Message">
 <button onclick="send()">Send</button>
@@ -31,10 +46,10 @@ input,button{
 
 <script type="module">
 
-import { pipeline, env } from
-"https://cdn.jsdelivr.net/npm/@xenova/transformers@2.17.2";
+import { pipeline, env }
+from "https://cdn.jsdelivr.net/npm/@xenova/transformers@2.17.2";
 
-// CRITICAL ANDROID FIX
+// ANDROID CRITICAL FIXES
 env.allowLocalModels = false;
 env.useBrowserCache = true;
 env.backends.onnx.wasm.numThreads = 1;
@@ -42,32 +57,62 @@ env.backends.onnx.wasm.simd = false;
 
 let pipe;
 
+// SYSTEM PROMPT
 let history =
 "You are a helpful assistant.";
 
-// LOAD MODEL
+
+// LOAD MODEL WITH % PROGRESS
 async function init(){
 
   try{
 
-    document.getElementById("status").innerText =
-    "Downloading small model...";
+    const status =
+    document.getElementById("status");
+
+    status.innerText =
+    "Preparing download...";
 
     pipe = await pipeline(
       "text-generation",
       "Xenova/distilgpt2",
       {
-        quantized:true
+
+        quantized:true,
+
+        progress_callback:(p)=>{
+
+          if(p.status==="download"){
+
+            const percent =
+            Math.round(p.progress||0);
+
+            status.innerText =
+            "Downloading model: "+
+            percent+"%";
+
+          }
+
+          if(p.status==="ready"){
+
+            status.innerText =
+            "AI Ready";
+
+          }
+
+        }
+
       }
     );
 
-    document.getElementById("status").innerText =
+    status.innerText =
     "AI Ready";
 
-  }catch(e){
+  }
+  catch(e){
 
     document.getElementById("status").innerText =
-    "ERROR: "+e.message;
+    "Error: "+e.message;
 
     console.log(e);
 
@@ -75,12 +120,17 @@ async function init(){
 
 }
 
+
+
 // SEND MESSAGE
-window.send = async function(){
+window.send =
+async function(){
 
   if(!pipe){
-    alert("Model still loading");
+
+    alert("Model loading...");
     return;
+
   }
 
   const input =
@@ -100,6 +150,7 @@ window.send = async function(){
 
   input.value="";
 
+
   try{
 
     const prompt =
@@ -107,19 +158,28 @@ window.send = async function(){
     "\nUser:"+msg+
     "\nAssistant:";
 
+
     const result =
-    await pipe(prompt,{
-      max_new_tokens:20,
-      do_sample:false
-    });
+    await pipe(
+      prompt,
+      {
+        max_new_tokens:20,
+        do_sample:false
+      }
+    );
+
 
     const text =
     result[0].generated_text;
 
+
     let reply =
     text.slice(prompt.length).trim();
 
-    if(!reply) reply="Ok.";
+
+    if(!reply)
+    reply="Ok.";
+
 
     chat.innerHTML =
     chat.innerHTML.replace(
@@ -127,22 +187,27 @@ window.send = async function(){
       "AI: "+reply
     );
 
+
     history+=
     "\nUser:"+msg+
     "\nAssistant:"+reply;
 
-  }catch(e){
+
+  }
+  catch(e){
 
     chat.innerHTML =
     chat.innerHTML.replace(
       "AI: thinking...",
-      "ERROR: "+e.message
+      "Error: "+e.message
     );
 
   }
 
 }
 
+
+// START
 init();
 
 </script>
